# xiaoxuan-core-image

./: Cargo.toml  README.md
src/: bytecode_reader.rs  bytecode_writer.rs  common_sections.rs  datatableaccess.rs  entry.rs  entry_reader.rs  entry_writer.rs  index_sections.rs  lib.rs  linking_sections.rs  module_image.rs  tableaccess.rs  utils.rs
src/common_sections/: common_property_section.rs  data_name_path_section.rs  data_name_section.rs  data_section.rs  export_data_section.rs  export_function_section.rs  external_function_section.rs  external_library_section.rs  function_name_path_section.rs  function_name_section.rs  function_section.rs  import_data_section.rs  import_function_section.rs  import_module_section.rs  local_variable_section.rs  property_section.rs  read_only_data_section.rs  read_write_data_section.rs  relocate_section.rs  type_section.rs  uninit_data_section.rs
src/index_sections/: data_index_section.rs  dependent_module_section.rs  dynamic_link_module_section.rs  entry_point_section.rs  external_function_index_section.rs  external_function_section.rs  external_library_section.rs  external_type_section.rs  function_index_section.rs  index_property_section.rs  module_list_section.rs  unified_external_library_section.rs
src/linking_sections/: data_index_section.rs  entry_point_section.rs  external_function_index_section.rs  function_index_section.rs  linking_module_section.rs  unified_external_function_section.rs  unified_external_library_section.rs  unified_external_type_section.rs
