[package]
name = "anc-image"
version = "2.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anc-isa = { path = "../xiaoxuan-core-isa" }
serde = { version = "1.0.216", features = ["derive"] }
ason = "1.4.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
